<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="8dp"
            app:cardBackgroundColor="?attr/colorPrimary"
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp"
            app:strokeColor="?attr/colorButtonNormal"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="12dp">

                <Switch
                    android:id="@+id/preferences_enable_dark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:fontFamily="@font/google_sans"
                    android:padding="18dp"
                    android:text="@string/enable_dark"
                    android:textSize="16sp" />

                <Switch
                    android:id="@+id/preferences_auto_updates_check"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:fontFamily="@font/google_sans"
                    android:padding="18dp"
                    android:text="@string/menu_auto_updates_check"
                    android:textSize="16sp" />

                <Switch
                    android:id="@+id/preferences_ab_perf_mode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:fontFamily="@font/google_sans"
                    android:padding="18dp"
                    android:text="@string/menu_ab_perf_mode"
                    android:textSize="16sp" />

                <Switch
                    android:id="@+id/preferences_mobile_data_warning"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:fontFamily="@font/google_sans"
                    android:padding="18dp"
                    android:text="@string/menu_mobile_data_warning"
                    android:textSize="16sp" />

                <Switch
                    android:id="@+id/preferences_auto_delete_updates"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/google_sans"
                    android:padding="18dp"
                    android:text="@string/menu_auto_delete_updates"
                    android:textSize="16sp" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="56dp"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>