<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingEnd="24dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="pill"
        android:src="@drawable/pin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/menu_auto_updates_check"
            android:textColor="@color/inverted"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/preferences_auto_updates_check_interval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:entries="@array/menu_auto_updates_check_interval_entries"
            android:gravity="clip_vertical|end" />
    </LinearLayout>

    <Switch
        android:id="@+id/preferences_auto_delete_updates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:checked="true"
        android:text="@string/menu_auto_delete_updates"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="16sp" />

    <Switch
        android:id="@+id/preferences_mobile_data_warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/menu_mobile_data_warning"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="16sp" />

    <Switch
        android:id="@+id/preferences_ab_perf_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/menu_ab_perf_mode"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="16sp" />

    <Switch
        android:id="@+id/preferences_update_recovery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/menu_update_recovery"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="16sp"
        android:visibility="gone" />
</LinearLayout>
