<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:navigationIcon="@drawable/ic_back"
            app:title="@string/choose_channel_title"
            app:titleTextAppearance="@style/TextAppearance_Toolbar" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/colorPrimary"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="56dp"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/google_sans_bold"
                android:text="@string/verified_channels"
                android:textAppearance="@style/TextAppearance_Material2"
                android:textColor="?android:attr/colorAccent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/verifiedRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="56dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/google_sans_bold"
                android:text="@string/custom_channel"
                android:textAppearance="@style/TextAppearance_Material2"
                android:textColor="?android:attr/colorAccent" />

            <include
                layout="@layout/palceholder_not_available"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/customRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>