<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?android:attr/colorPrimary">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/homeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="8dp"
                app:cardBackgroundColor="?attr/colorPrimary"
                app:cardCornerRadius="12dp"
                app:cardElevation="3dp"
                app:strokeColor="?attr/darkerBackgroundColor"
                app:strokeWidth="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="?attr/darkerBackgroundColor"
                        android:orientation="vertical"
                        android:padding="12dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="end"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/ota_check_title"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="@font/google_sans"
                                android:text="@string/check_for_updates"
                                android:textColor="?android:attr/textColorPrimary"
                                android:textSize="16sp" />

                            <ImageButton
                                android:id="@+id/ota_check"
                                android:layout_width="wrap_content"
                                android:layout_height="24dp"
                                android:background="?attr/selectableItemBackgroundBorderless"
                                android:tint="?android:attr/colorAccent"
                                app:srcCompat="@drawable/ic_menu_refresh" />
                        </LinearLayout>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/updateRecycler"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:alpha="0.8"
                            android:fontFamily="@font/google_sans"
                            android:text="@string/current_version" />

                        <TextView
                            android:id="@+id/ota_current"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/google_sans"
                            android:textColor="?android:attr/textColorPrimary"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/uinfo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="12dp"
                        android:visibility="gone">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="end"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="@font/google_sans"
                                android:text="@string/information"
                                android:textColor="?android:attr/textColorPrimary"
                                android:textSize="16sp" />

                        </LinearLayout>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/changelogRecycler"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/no_update_layout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="match_parent"
                            android:layout_height="142dp"
                            android:layout_marginTop="24dp"
                            app:srcCompat="@drawable/no_update" />

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:layout_marginBottom="24dp"
                            android:fontFamily="@font/google_sans_bold"
                            android:text="@string/list_no_updates"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance_Material2"
                            android:textColor="?attr/colorAccent"
                            android:textSize="18sp" />
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="56dp"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:id="@+id/snackProvider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

    </FrameLayout>

</RelativeLayout>